Renamed for easier sorting

--- a/notebooks/01. Why Machine Learning and Security.ipynb
+++ b/notebooks/01. Why Machine Learning and Security.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "---\n",
     "\n",
-    "**CHIO & FREEMAN: MACHINE LEARNING & SECURITY (2018)**"
+    "**CHIO & FREEMAN: MACHINE LEARNING & SECURITY (2018)** <br>\n",
+    "*<small>Otsikot kirjan mukaan, muutoin suomeksi.</small>*"
    ]
   },
   {
@@ -18,7 +19,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Cyber-Threat-Landscape\" data-toc-modified-id=\"Cyber-Threat-Landscape-1\">Cyber Threat Landscape</a></span></li><li><span><a href=\"#What-Is-Machine-Learning?\" data-toc-modified-id=\"What-Is-Machine-Learning?-2\">What Is Machine Learning?</a></span></li><li><span><a href=\"#Real-World-Uses-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Real-World-Uses-of-Machine-Learning-in-Security-3\">Real-World Uses of Machine Learning in Security</a></span></li><li><span><a href=\"#Spam-Fighting:-An-Iterative-Approach\" data-toc-modified-id=\"Spam-Fighting:-An-Iterative-Approach-4\">Spam Fighting: An Iterative Approach</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Cyber-Threat-Landscape\" data-toc-modified-id=\"Cyber-Threat-Landscape-1\">Cyber Threat Landscape</a></span></li><li><span><a href=\"#What-Is-Machine-Learning?\" data-toc-modified-id=\"What-Is-Machine-Learning?-2\">What Is Machine Learning?</a></span></li><li><span><a href=\"#Real-World-Uses-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Real-World-Uses-of-Machine-Learning-in-Security-3\">Real-World Uses of Machine Learning in Security</a></span></li></ul></div>"
    ]
   },
   {
