Refactored code for elegance.

--- a/notebooks/01. Why Machine Learning and Security.ipynb
+++ b/notebooks/01. Why Machine Learning and Security.ipynb
@@ -300,10 +300,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "results = pd.DataFrame(\n",
-    "    data=[[true_neg,false_pos],[false_neg,true_pos]],\n",
-    "    index=['model_0','model_1'],columns=['true_0','true_1']\n",
-    ")\n",
+    "results = pd.DataFrame(data=[[true_neg, false_pos], [false_neg, true_pos]],\n",
+    "                       index=['model_0', 'model_1'], columns=['true_0', 'true_1'])\n",
+    "results_p = results/results.sum().sum()*100\n",
     "results"
    ]
   },
@@ -371,7 +370,7 @@
     }
    ],
    "source": [
-    "results_p = results/results.sum().sum()*100\n",
+    "\n",
     "results_p"
    ]
   },
