Refactoring for elegance.

--- a/notebooks/01. Why Machine Learning and Security.ipynb
+++ b/notebooks/01. Why Machine Learning and Security.ipynb
@@ -150,7 +150,9 @@
    ],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "from utils import email_utils\n",
+    "from IPython.display import display\n",
     "\n",
     "ROOT_DIR = os.path.join(os.path.dirname(os.getcwd()),'datasets','trec07p')\n",
     "DATA_DIR = os.path.join(ROOT_DIR,'data')\n",
@@ -200,41 +202,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "true_pos, true_neg, false_pos, false_neg = 0, 0, 0, 0\n",
-    "\n",
-    "for filename in x_test:\n",
-    "\n",
-    "    path = os.path.join(DATA_DIR, filename)\n",
-    "\n",
-    "    if filename in labels:\n",
-    "\n",
-    "        label, stems = labels[filename], email_utils.load_stems(path)\n",
-    "\n",
-    "        if not stems:\n",
-    "            continue\n",
-    "\n",
-    "        if stems & blacklist: # Malli: 0\n",
-    "            if label == 1:\n",
-    "                false_neg += 1\n",
-    "            else:\n",
-    "                true_neg += 1\n",
-    "        else: # Malli: 1\n",
-    "            if label == 1:\n",
-    "                true_pos += 1\n",
-    "            else:\n",
-    "                false_pos += 1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esitellään tulos hieman siistimmin, sekaannusmatriisin (*confusion matrix*) muodossa. Matriisin sisältö on seuraavanlainen:\n",
+    "Huomionarvoista on, että [kirjan implementaatio](https://github.com/oreilly-mlsec/book-resources/blob/master/chapter1/spam-fighting-blacklist.ipynb) laskee tulokset väärin. Sen mukaan mallin ennustaessa roskapostia (0) ja todellisuuden ollessa oikea posti (1) on kyseessä väärä positiivinen, vaikka kyseessä on väärä negativiinen mallin näkökulmasta. \n",
+    "\n",
+    "Tulokset esitetään sekaannusmatriisin (*confusion matrix*) muodossa. Matriisin sisältö on seuraavanlainen:\n",
     "\n",
     "Tulokset | Tosi: 0 | Tosi: 1 |\n",
     " --- | --- | ---\n",
@@ -244,9 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tulokset määrissä:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -293,31 +273,16 @@
        "model_1    2755   14769"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "results = pd.DataFrame(data=[[true_neg, false_pos], [false_neg, true_pos]],\n",
-    "                       index=['model_0', 'model_1'], columns=['true_0', 'true_1'])\n",
-    "results_p = results/results.sum().sum()*100\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Prosenteissa esitettynä tulos on seuraavanlainen:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tulokset prosenteissa:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -364,46 +329,57 @@
        "model_1   5.657317  30.327734"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "results_p"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mallin tarkkuus on siis:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67.678%\n"
+      "Mallin tarkkuus (ON+OP): 67.678%\n"
      ]
     }
    ],
    "source": [
-    "print(f'{results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
+    "true_pos, true_neg, false_pos, false_neg = 0, 0, 0, 0\n",
+    "\n",
+    "for filename in x_test:\n",
+    "\n",
+    "    path = os.path.join(DATA_DIR, filename)\n",
+    "\n",
+    "    if filename in labels:\n",
+    "\n",
+    "        label, stems = labels[filename], email_utils.load_stems(path)\n",
+    "\n",
+    "        if not stems:\n",
+    "            continue\n",
+    "\n",
+    "        if stems & blacklist: # Malli: 0\n",
+    "            if label == 1:\n",
+    "                false_neg += 1\n",
+    "            else:\n",
+    "                true_neg += 1\n",
+    "        else: # Malli: 1\n",
+    "            if label == 1:\n",
+    "                true_pos += 1\n",
+    "            else:\n",
+    "                false_pos += 1\n",
+    "\n",
+    "results = pd.DataFrame(data=[[true_neg, false_pos], [false_neg, true_pos]],\n",
+    "                       index=['model_0', 'model_1'], columns=['true_0', 'true_1'])\n",
+    "results_p = results/results.sum().sum()*100\n",
+    "\n",
+    "print(\"Tulokset määrissä:\")\n",
+    "display(results)\n",
+    "print(\"Tulokset prosenteissa:\")\n",
+    "display(results_p)\n",
+    "print(f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')\n",
+    "print(\"Tulokset määrissä:\")\n",
+    "display(results)\n",
+    "print(\"Tulokset prosenteissa:\")\n",
+    "display(results_p)\n",
+    "print(f'Mallin tarkkuus (ON+OP): {results_p.iloc[0,0]+results_p.iloc[1,1]:.3f}%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
