--- a/notebooks/01. Why Machine Learning and Security.ipynb
+++ b/notebooks/01. Why Machine Learning and Security.ipynb
@@ -18,15 +18,15 @@
     "toc": true
    },
    "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Cyber-Threat-Landscape\" data-toc-modified-id=\"Cyber-Threat-Landscape-1\">Cyber Threat Landscape</a></span></li><li><span><a href=\"#What-Is-Machine-Learning?\" data-toc-modified-id=\"What-Is-Machine-Learning?-2\">What Is Machine Learning?</a></span></li><li><span><a href=\"#Real-World-Uses-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Real-World-Uses-of-Machine-Learning-in-Security-3\">Real-World Uses of Machine Learning in Security</a></span></li><li><span><a href=\"#Spam-Fighting:-An-Iterative-Approach\" data-toc-modified-id=\"Spam-Fighting:-An-Iterative-Approach-4\">Spam Fighting: An Iterative Approach</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mustalistaus\" data-toc-modified-id=\"Mustalistaus-4.1\">Mustalistaus</a></span></li><li><span><a href=\"#Yhteistyösuodatus\" data-toc-modified-id=\"Yhteistyösuodatus-4.2\">Yhteistyösuodatus</a></span></li><li><span><a href=\"#Naiivi-Bayes\" data-toc-modified-id=\"Naiivi-Bayes-4.3\">Naiivi Bayes</a></span></li></ul></li><li><span><a href=\"#Limitations-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Limitations-of-Machine-Learning-in-Security-5\">Limitations of Machine Learning in Security</a></span></li></ul></div>"
+    "<h1>Sisällysluettelo<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Why-Machine-Learning-and-Security?\" data-toc-modified-id=\"Why-Machine-Learning-and-Security?-1\">Why Machine Learning and Security?</a></span><ul class=\"toc-item\"><li><span><a href=\"#Cyber-Threat-Landscape\" data-toc-modified-id=\"Cyber-Threat-Landscape-1.1\">Cyber Threat Landscape</a></span></li><li><span><a href=\"#What-Is-Machine-Learning?\" data-toc-modified-id=\"What-Is-Machine-Learning?-1.2\">What Is Machine Learning?</a></span></li><li><span><a href=\"#Real-World-Uses-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Real-World-Uses-of-Machine-Learning-in-Security-1.3\">Real-World Uses of Machine Learning in Security</a></span></li><li><span><a href=\"#Spam-Fighting:-An-Iterative-Approach\" data-toc-modified-id=\"Spam-Fighting:-An-Iterative-Approach-1.4\">Spam Fighting: An Iterative Approach</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mustalistaus\" data-toc-modified-id=\"Mustalistaus-1.4.1\">Mustalistaus</a></span></li><li><span><a href=\"#Yhteistyösuodatus\" data-toc-modified-id=\"Yhteistyösuodatus-1.4.2\">Yhteistyösuodatus</a></span></li><li><span><a href=\"#Naiivi-Bayes\" data-toc-modified-id=\"Naiivi-Bayes-1.4.3\">Naiivi Bayes</a></span></li></ul></li><li><span><a href=\"#Limitations-of-Machine-Learning-in-Security\" data-toc-modified-id=\"Limitations-of-Machine-Learning-in-Security-1.5\">Limitations of Machine Learning in Security</a></span></li></ul></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Why Machine Learning and Security?"
+    "# Why Machine Learning and Security?\n"
    ]
   },
   {
@@ -849,9 +849,9 @@
    "nav_menu": {},
    "number_sections": false,
    "sideBar": true,
-   "skip_h1_title": true,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
+   "skip_h1_title": false,
+   "title_cell": "Sisällysluettelo",
+   "title_sidebar": "Sisällysluettelo",
    "toc_cell": true,
    "toc_position": {
     "height": "1158px",
